--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -583,23 +583,23 @@ outline:none;
 
 
 
-@media screen and (max-width:1244px){
+@media screen and (max-width:944px){
 
   .text-container{
-    position: absolute;
+    position: absolute !important;
     width: 100% !important;
-    padding-bottom: 160%;
-    top: 0%;
+    padding-bottom: 160% !important;
+    top: 0% !important;
     height:600px !important;
   }
 
   .logo_container{
-    width:95%;
-    margin-left:5%;
-    margin-top:0%;
+    width:95% !important;
+    margin-left:5% !important;
+    margin-top:0% !important;
   }
   .intro-form-container{
-    margin-left:-5%;
+    margin-left:-5% !important;
   }
   .name_container{
     width:100% !important;
@@ -607,46 +607,46 @@ outline:none;
   }
   .big-text{
 
-    letter-spacing: 0px;
-    font-size:18px;
-    padding:2.5%;
+    letter-spacing: 0px !important;
+    font-size:18px !important;
+    padding:2.5% !important;
 
-    margin-left:2.5%;
+    margin-left:2.5% !important;
   }
   .big-text-container{
-    padding:2.5%;
-    width:80%;
-    margin-left: 5%;
+    padding:2.5% !important;
+    width:80% !important;
+    margin-left: 5% !important;
   }
   .about_us{
-    margin-top:200%;
+    margin-top:200% !important;
   }
   .values_container{
     max-width:100% !important;
-        flex: 0 0 100%;
+        flex: 0 0 100% !important;
     width:100% !important;
   }
   .value_row{
-    margin-left:5%;
-    margin-top:10%;
+    margin-left:5% !important;
+    margin-top:10% !important;
   }
   .about-us-title{
-    color: white;
-    font-size: 35px;
-    line-height: 70px;
-    margin-bottom:10%;
-    font-weight: normal;
-    margin-bottom: 5%;
-    font-family: "Akrobat";
-    background: #00103d;
+    color: white !important;
+    font-size: 35px !important;
+    line-height: 70px !important;
+    margin-bottom:10% !important;
+    font-weight: normal !important;
+    margin-bottom: 5% !important;
+    font-family: "Akrobat" !important;
+    background: #00103d !important;
     width:100% !important;
-    padding: 1%;
-    text-align: center;
-    padding-left: 2.5%;
+    padding: 1% !important;
+    text-align: center !important;
+    padding-left: 2.5% !important;
   }
 
   .about-us-text{
-    font-size:30px;
+    font-size:30px !important;
   }
   .video-container video {
     height:600px !important;
@@ -658,20 +658,20 @@ outline:none;
 
     content: "";
     position: absolute;
-    z-index: 0;
-    width: 200%;
-    bottom: 50%;
+    z-index: 0 !important;
+    width: 200% !important;
+    bottom: 50% !important;
     height: 300px !important;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
   }
   .our_work_section{
 
-    right:0px;
-    margin-top: 75%;
-    background: white;
-        width: 105%;
-        position: relative;
+    right:0px !important;
+    margin-top: 75% !important;
+    background: white !important;
+        width: 105% !important;
+        position: relative !important;
 
   }
   .text-about-us-box_4 {
@@ -681,8 +681,8 @@ outline:none;
     height:200px !important;
   }
   .our_work_grid {
-    background:white;
-      position:absolute;
+    background:white !important;
+      position:absolute !important;
       top:0%;
       z-index:999;
       display:inline;
@@ -691,7 +691,7 @@ outline:none;
       padding-bottom:15%;
   }
   .work_grid_item{
-    float:left;
+    float:left !important;
     max-width:40%;
     width:40%;
     margin-left:5%;
