--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -605,6 +605,9 @@ outline:none;
     width:100% !important;
     max-width:100% !important;
   }
+  .intro-row{
+    width:150%;
+  }
   .big-text{
 
     letter-spacing: 0px !important;
