--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -643,6 +643,9 @@ html{
   .bigger-text-container{
     width:85% !important;
   }
+  video{
+    overflow-y: hidden;
+  }
   .wave:before{
 
     content: "";
