--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -19,8 +19,8 @@
   height:1200px;
 }
 .big-text-container{
-  background:#094783;
   width:100%;
+  background:#00103d;
   margin-top:5%;
   position: relative;
   animation: move_text_left 1s ease-in 1;
@@ -38,6 +38,9 @@
   100%{
     left:0px;
   }
+}
+.background-1{
+  background:#00103d !important;
 }
 .big-text{
   color:white;
@@ -566,7 +569,7 @@ outline:none;
 
 
 
-html{
+body{
   overflow-x:hidden;
 }
 @media screen and (max-width:944px){
