--- a/views/layout/showcase.ejs
+++ b/views/layout/showcase.ejs
@@ -12,10 +12,10 @@
 </div>
 
     <div class="intro-text-container">
-        <div class="big-text-container big-text-container-ani-1">
+        <div class="big-text-container big-text-container-ani-1 background-1">
               <p class="big-text">A Locally Owned</p>
         </div>
-          <div class="big-text-container big-text-container-ani-2 width-120 bigger-text-container" >
+          <div class="big-text-container big-text-container-ani-2 width-120 bigger-text-container background-1" >
               <p class="big-text">Window Cleaning Company</p>
           </div>
 
