--- a/views/layout/about/mission.ejs
+++ b/views/layout/about/mission.ejs
@@ -1,11 +1,11 @@
 <div class="about_container relative padding-bottom-10">
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-3 mobile_divide"></div>
+        <div class="col-6 mobile_mission_container">
             <p class="about_title"> Our Mission </p>
             <p class="about_description">
 
-            Our mission is to revolutionize the facility services industry by fostering a team of people who care about the local community and are passionate about the customer. 
+            Our mission is to revolutionize the facility services industry by fostering a team of people who care about the local community and are passionate about the customer.
             </p>
         </div>
     </div>
