--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -1,9 +1,9 @@
 <div class="what_we_do_container relative">
 
-    <img src = "./assets/showcase_2.png" src="width-100 image_about_us"/>
+    <img src = "./assets/showcase_2.png" class="what_we_do_image"/>
     <div class="what_we_do_inner">
     <div class="row margin-top-5">
-    <div class="col-5 padding-left-5">
+    <div class="col-5 padding-left-5 what_we_do_col">
     <p class="what_we_do_title"> What We Do </p>
     <p class="what_we_do_description">
 
