--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -1,11 +1,11 @@
 
-<%- include("./../layout/head.ejs") %>
+<%- include("./../layout/about/head.ejs") %>
 
 <div class="container-fluid home_page" >
 
   <div class="row">
-      <div class="col-12 padding-2 background-1a" >
-          <%- include("./../layout/navbar.ejs") %>
+      <div class="col-12 padding-2 background-1a navbar_container" >
+        
       </div>
   </div>
 
@@ -16,5 +16,5 @@
   <%- include("./../layout/about/mission.ejs") %>
   <%- include("./../layout/about/what_we_do.ejs") %>
 
-
+  <script src ="./assets/js/navbar_render.js"></script>
 </div>
