--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -601,7 +601,7 @@ video{
   .big-text{
 
     letter-spacing: 0px !important;
-    font-size:18px !important;
+    font-size:18px;
     padding:2.5% !important;
 
     margin-left:2.5% !important;
