--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -1,45 +1,39 @@
 <div class="relative">
-<div class="row relative">
 
-    <div class="col-4 no-pad intro-container relative">
-        <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5">
-        <img src = "./assets/logo.png"class="width-100" />
-    </div>
+  <div class="row relative">
 
-    <div class="darkbluebackg background width-50 text-container "style="height:900px">
-
-    </div>
-  </div>
-</div>
-
-    <div class="intro-text-container">
-        <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small">
-              <p class="big-text">About</p>
-        </div>
-          <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-big" >
-              <p class="big-text medium-text">Custom Facility Services</p>
+      <div class="col-4 no-pad intro-container relative">
+          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5 logo_container">
+            <img src = "./assets/logo.png"class="width-100" />
           </div>
+          <div class="darkbluebackg background width-50 text-container "style="height:900px">
+          </div>
+      </div>
 
-
-
-  <div class="banners_about row relative">
-      <div class="col-12">
-      <div class='row relative'>
-      <div class="col-12 darkbluebanner"></div>
-      <div class="col-9 lightbluebanner lightbluebanner_about"></div>
-
-    </div>
-
-    </div>
   </div>
 
+      <div class="intro-text-container">
+          <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small">
+                <p class="big-text big-text-about">About</p>
+          </div>
+            <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-big" >
+                <p class="big-text medium-text big-text-about">Custom Facility Services</p>
+            </div>
 
+        <div class="banners_about row relative">
+            <div class="col-12">
+              <div class='row relative'>
+              <div class="col-12 darkbluebanner"></div>
+              <div class="col-9 lightbluebanner lightbluebanner_about"></div>
 
+           </div>
+          </div>
+          
+        </div>
+    </div>
 
-
-</div>
-<div class="showcase_image_about">
-    <img src ="./assets/showcase_1.png" class="width-100"/>
-</div>
+  <div class="showcase_image_about">
+      <img src ="./assets/showcase_1.png" class="width-100"/>
+  </div>
 
 </div>
