--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -11,13 +11,13 @@
 
     </p>
     <div class="row margin-top-10">
-        <div class="col-3">
+        <div class="col-3 link_col">
             <p class="link_about"> Get A Quote </p>
         </div>
-        <div class="col-3">
+        <div class="col-3 link_col">
             <p class="link_about"> Contact Us </p>
         </div>
-        <div class="col-3">
+        <div class="col-3 link_col">
             <p class="link_about"> Our Clients </p>
         </div>
     </div>
