--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -117,7 +117,9 @@ body{
   top:0% !important;
 }
 
-
+body{
+  overflow-x: hidden !important;
+}
 
 @media screen and (max-width:944px){
   .big-text-about{
@@ -145,6 +147,7 @@ body{
     font-size:17px !important;
   }
   .what_we_do_col{
+    margin-left:5%;
     flex: 0 0 65%;
     max-width: 65%;
     width:65%;
@@ -172,5 +175,10 @@ body{
   }
   .text-container{
     height:500px !important;
+  }
+  .link_col{
+    flex: 0 0 50%;
+    max-width: 50%;
+    width:50%;  
   }
 }
