--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -12,7 +12,7 @@
     </p>
     <div class="row margin-top-10">
         <div class="col-3 link_col">
-            <p class="link_about"> Get A Quote </p>
+            <p class="link_about"> Free Quote </p>
         </div>
         <div class="col-3 link_col">
             <p class="link_about"> Contact Us </p>
