--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -179,6 +179,9 @@ body{
   .link_col{
     flex: 0 0 50%;
     max-width: 50%;
-    width:50%;  
+    width:50%;
+  }
+  .intro-about-container{
+    top:140%;
   }
 }
