--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -12,7 +12,7 @@
 
   </div>
 
-      <div class="intro-text-container">
+      <div class="intro-text-container intro-about-container">
           <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small">
                 <p class="big-text big-text-about">About</p>
           </div>
@@ -23,12 +23,11 @@
         <div class="banners_about row relative">
             <div class="col-12">
               <div class='row relative'>
-              <div class="col-12 darkbluebanner"></div>
-              <div class="col-9 lightbluebanner lightbluebanner_about"></div>
-
-           </div>
+                <div class="col-12 darkbluebanner"></div>
+                <div class="col-9 lightbluebanner lightbluebanner_about"></div>
+              </div>
           </div>
-          
+
         </div>
     </div>
 
