--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -42,10 +42,8 @@
   </div>
 
 
-  <script src ="./assets/js/navbar_render.js"></script>
+
 
   <script src = "./assets/js/dropdown."></script>
 
-</body>
-
-</html>
+  <%- include("./../layout/end.ejs") %>
