--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -5,7 +5,7 @@
 
   <div class="row">
       <div class="col-12 padding-2 background-1a navbar_container" >
-        
+
       </div>
   </div>
 
@@ -16,5 +16,7 @@
   <%- include("./../layout/about/mission.ejs") %>
   <%- include("./../layout/about/what_we_do.ejs") %>
 
-  <script src ="./assets/js/navbar_render.js"></script>
+
 </div>
+
+<%- include("./../layout/end.ejs") %>
