--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -44,6 +44,6 @@
 
 
 
-  <script src = "./assets/js/dropdown."></script>
+  <script src = "./assets/js/dropdown.js"></script>
 
   <%- include("./../layout/end.ejs") %>
