--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -117,7 +117,9 @@ body{
   top:0% !important;
 }
 
-
+body{
+  overflow-x:hidden !important;
+}
 
 @media screen and (max-width:944px){
   .big-text-about{
