--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -117,10 +117,11 @@ body{
   top:0% !important;
 }
 
-body{
-  overflow-x:hidden !important;
-}
 
+/* 
+ html{
+  overflow-x: hidden;
+} */
 @media screen and (max-width:944px){
   .big-text-about{
     font-size:20px !important;
