--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,7 +1,7 @@
 
 
   <%- include("./../layout/head.ejs") %>
-
+<div id="wrapper">
 
     <div class="container-fluid home_page padding-bottom-75" >
 
@@ -37,7 +37,7 @@
 
         <%- include("./../layout/contact.ejs") %>
     </div>
-
+</div>
 
   </div>
 
