--- a/public/assets/css/util.css
+++ b/public/assets/css/util.css
@@ -14,9 +14,13 @@
 
 #wrapper{
   overflow-x:hidden;
-  width:100%;
-  position:relative;
-  
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  height: 100%;
+
 }
 video{
 
