--- a/public/assets/css/util.css
+++ b/public/assets/css/util.css
@@ -7,11 +7,15 @@
 .clear{
   clear:both;
 }
-
+.mt2_5{
+  margin-top:2.5%;
+}
 .relative{
   position: relative;
 }
-
+.medium-font{
+  font-size:20px !important;
+}
 #wrapper{
   overflow-x:hidden;
   width: 100%;
