--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -16,7 +16,7 @@
           <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small">
                 <p class="big-text big-text-about">About</p>
           </div>
-            <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-big" >
+            <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-bigger" >
                 <p class="big-text medium-text big-text-about">Custom Facility Services</p>
             </div>
 
