--- a/public/assets/css/util.css
+++ b/public/assets/css/util.css
@@ -22,9 +22,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 99999;
+  z-index: 999;
   height: 100%;
 
+}
+.no-padding{
+  padding:0% ;
 }
 video{
 
