--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2,7 +2,7 @@
 
   <%- include("./../layout/head.ejs") %>
 <div id="wrapper">
-
+    <%- include("./../layout/modal.ejs") %>
     <div class="container-fluid home_page padding-bottom-75" >
 
       <div class="row">
