--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -1,17 +1,25 @@
-<div class="modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+<div class="cfs_modal_wrapper"></div>
+
+
+<div class="cfs_modal" tabindex="-1">
+  <div class="row">
+      <div class="col-3"></div>
+      <div class='col-6 modal_body no-padding'>
+          <img class="width-100" src="./assets/window1.gif"/>
+        <div class="modal-dialog">
+
+          <p class="quote_title">Your Quote:</p>
+
+          <p class="quote_number">$30 Inside or Outside</p>
+          <p class="quote_number">$45 Inside and Outside</p>
+          <div class="quote_contact_us">
+            <p class="quote_pitch">Schedule a Cleaning Now!</p>
+            <button class="btn btn-danger quote_button_modal">489-494-4094</button>
+
+        </div>
+
       </div>
     </div>
   </div>
+
 </div>
