--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -3,8 +3,8 @@
 
 <div class="cfs_modal" tabindex="-1">
   <div class="row">
-      <div class="col-3"></div>
-      <div class='col-6 modal_body no-padding'>
+      <div class="col-3 modal_divider"></div>
+      <div class='col-6 modal_body no-padding modal_col'>
           <img class="width-100" src="./assets/window1.gif"/>
         <div class="modal-dialog">
 
