--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,7 +1,7 @@
 
 
   <%- include("./../layout/head.ejs") %>
-<div id="wrapper">
+<div id="wrapper" class="<%=lock %> ">
     <%- include("./../layout/modal.ejs") %>
     <div class="container-fluid home_page padding-bottom-75" >
 
@@ -45,5 +45,6 @@
 
 
   <script src = "./assets/js/dropdown.js"></script>
+  <script src = "./assets/js/modal.js"></script>
 
   <%- include("./../layout/end.ejs") %>
