--- a/public/assets/css/cfs_modal.css
+++ b/public/assets/css/cfs_modal.css
@@ -1,10 +1,20 @@
 .cfs_modal{
   position: absolute;
-  top:5%;
+  top:2.5%;
   width:100%;
   left:0%;
-  z-index:99999;
-  animation:modal_appear 1s 1 ease-in;
+  opacity:0;
+  visibility: hidden;
+}
+.active_modal{
+  opacity:1;
+  z-index:999;
+  visibility: visible;
+  position: absolute;
+  top:2.5%;
+  width:100%;
+  left:0%;
+  animation:modal_appear .5s 1 ease-in;
 }
 @keyframes modal_appear{
   0%{
@@ -14,43 +24,72 @@
     top:5%;
   }
 }
-#wrapper{
+.lock_screen{
   overflow-y:hidden !important;
+}
+.active_wrapper{
+    opacity:.5 !important;
+    padding-bottom:10%;
+    background:black !important;
+    z-index:999;
+    top:0%;
+    left:0%;
+    height:1080px;
+    width:100%;
+    position: absolute;
 }
 .cfs_modal_wrapper{
   width:100%;
   height:1080px;
-  z-index:9999;
-  opacity:.5;
+  opacity:0;
   top:0%;
   left:0%;
   position: absolute;
-  background:black;
+
+}
+#modal_exit{
+  color:#1B1742;
+  position:absolute;
+  top:5%;
+  left:5%;
+  font-size:25px;
+  z-index:999
+}
+#modal_exit:hover{
+  color:black !important;
 }
 .modal_body{
-  background:white;
-  border-radius:4px;
+  background:#1B1742;
+  border-radius:5px;
+  padding-bottom:2.5%;
   box-shadow:1px 1px 9px 2px black;
 
 }
 .quote_title{
   font-size: 30px;
+  color:white;
   text-align: center;
 font-weight: bold;
 font-family: "Akrobat";
 }
 .quote_number{
   font-size: 25px;
+  color:white;
+
   text-align: center;
   font-family: "Akrobat";
 }
 .quote_contact_us{
   margin-top:10%;
+  color:white;
+
 }
 
 .quote_pitch{
   font-size:16px;
   font-style: italic;
+  color:white;
+
   text-align: center;
   font-family: "Akrobat";
 }
@@ -60,11 +99,12 @@ font-family: "Akrobat";
   margin-left: 5%;
   border-radius:30px;
   border-width:2px !important;
-  color:black ;
+  color:white ;
   position: relative;
   z-index:999999;
-  background:white ;
-  border-color:black ;
+  background:transparent !important;
+  border-color:white ;
+
 }
 .quote_button_modal:hover{
   color:white !important;
@@ -80,7 +120,9 @@ font-family: "Akrobat";
   }
   .modal_col{
     width:83.333333333% !important;
+    padding-bottom:5%;
     max-width:83.33333333% !important;
     flex: 0 0 83.333333333% !important;
   }
+
 }
