--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -563,6 +563,11 @@ outline:none;
   }
 }
 
+.quote_btn{
+  background:black;
+  border-color:black;
+
+}
 
 @media screen and (max-width:944px){
 .active-dropdown{
