--- a/views/layout/showcase.ejs
+++ b/views/layout/showcase.ejs
@@ -65,8 +65,8 @@
         <div class="col-12 margin-top-5">
             <input class="form-control width-100 margin-top-2_5" value = 9 placeholder="Date of Quote" type="hidden" name = "time"  />
         </div>
-        <div class="col-6">
-            <button type="submit width-100 margin-top-5" class="btn btn-danger">Submit</button>
+        <div class="col-12">
+            <button type="submit" class="quote_btn width-100 margin-top-5 btn btn-danger">Submit</button>
         </div>
 
       </form>
