--- a/views/layout/quote/head.ejs
+++ b/views/layout/quote/head.ejs
@@ -11,7 +11,8 @@
      <link rel="stylesheet" type="text/css" href="./assets/css/about.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/home.css" />
      <link rel="stylesheet" type="text/css" href="./assets/css/util.css" />
-       <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
+         <link rel="stylesheet" type="text/css" href="./assets/css/quote.css" />
      <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/components/header.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
