--- a/views/layout/quote/showcase.ejs
+++ b/views/layout/quote/showcase.ejs
@@ -6,18 +6,18 @@
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5 logo_container">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
-          <div class="darkbluebackg background width-50 text-container "style="height:900px">
+          <div class="darkbluebackg background width-50 text-container  ">
           </div>
       </div>
 
   </div>
 
       <div class="intro-text-container intro-about-container">
-          <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small">
+          <div class="big-text-container big-text-container-ani-1 big-text-quote big-text-about-small">
                 <p class="big-text big-text-about">Clean Windows Today!</p>
           </div>
             <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-bigger" >
-                <p class="big-text medium-text big-text-about">Free Quote!</p>
+                <p class="big-text  text-center big-text-about">Free Quote!</p>
             </div>
 
         <div class="banners_about row relative">
