--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -1,7 +1,7 @@
 
 <%- include("./../layout/about/head.ejs") %>
 
-<div id="wrapper">
+<div id="wrapper" class="<%=lock %> ">
   <div class="container-fluid home_page" >
 
     <div class="row">
