--- a/views/layout/quote/what_we_do.ejs
+++ b/views/layout/quote/what_we_do.ejs
@@ -1,29 +1,17 @@
-<div class="what_we_do_container relative">
+<div class="work_container relative">
 
-    <img src = "./assets/showcase_2.png" class="what_we_do_image"/>
+    <img src = "./assets/lean.png" class="what_we_do_image"/>
       <div class="what_we_do_inner">
         <div class="row margin-top-5">
+          <div class="col-1"></div>
+          <div class="col-10 what_we_do_col">
+            <p class="what_we_do_title text-center"> What We Do </p>
 
-          <div class="col-5 padding-left-5 what_we_do_col">
-            <p class="what_we_do_title"> What We Do </p>
-
-              <p class="what_we_do_description">
+              <p class="what_we_do_description text-center">
                   A business that looks well maintained is successful. Our company specializes in cleaning windows and patios to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
               </p>
 
-              <div class="row margin-top-10">
-                  <div class="col-3 link_col">
-                      <p class="link_about"> Free Quote </p>
-                  </div>
-                  <div class="col-3 link_col">
-                      <p class="link_about"> Contact Us </p>
-                  </div>
-                  <div class="col-3 link_col">
-                      <p class="link_about"> Our Clients </p>
-                  </div>
-              </div>
 
-            </div>
 
           </div>
 
