--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -600,16 +600,20 @@ outline:none;
 
   .big-text{
     letter-spacing: 0px !important;
-    font-size:20px !important;
+    font-size:35px !important;
     font-weight: bold !important;
-    padding:1.5% !important;
     margin-left:2.5% !important;
+    margin-top:2.5% !important
   }
 
+
   .big-text-container{
-    padding:2.5% !important;
+    padding:1% !important;
     width:110% !important;
     margin-left: 5% !important;
+  }
+  .bigger-text-container{
+    width:130% !important;
   }
   .about_us{
     margin-top:140% !important;
@@ -644,9 +648,7 @@ outline:none;
   .video-container video {
     height:600px !important;
   }
-  .bigger-text-container{
-    width:85% !important;
-  }
+
   video{
     overflow-y: hidden;
   }
