--- a/views/layout/showcase.ejs
+++ b/views/layout/showcase.ejs
@@ -13,10 +13,10 @@
 
     <div class="intro-text-container">
         <div class="big-text-container big-text-container-ani-1 background-1">
-              <p class="big-text">Window Cleaning</p>
+              <p class="big-text">Make Your Windows</p>
         </div>
           <div class="big-text-container big-text-container-ani-2 width-120 bigger-text-container background-1" >
-              <p class="big-text">Locally Owned in Phoenix</p>
+              <p class="big-text">Look Spotless Today!</p>
           </div>
 
 
