--- a/views/layout/showcase.ejs
+++ b/views/layout/showcase.ejs
@@ -33,7 +33,7 @@
 
   <div class="row intro-row">
   <div class="intro-form-container col-12">
-      <p class="form-title"> Get a Quote Today!</p>
+      <p class="form-title bold"> Get a Quote Today!</p>
       <p class="form-subtitle"> We will get back to you as soon as we can!</p>
 
       <div class="form-container-intro">
