--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -19,7 +19,7 @@
   height:1200px;
 }
 .big-text-container{
-  width:100%;
+  width:140% !important;
   background:#00103d;
   margin-top:5%;
   position: relative;
@@ -570,6 +570,13 @@ outline:none;
 
 }
 
+.bigger-text-container{
+  width:175% !important;
+}
+.navbar_home{
+  background:#00103d !important
+}
+
 @media screen and (max-width:944px){
 .active-dropdown{
   height:300px !important;
@@ -665,7 +672,7 @@ outline:none;
   .our_work_section{
 
     right:0px !important;
-    margin-top: 75% !important;
+    margin-top: 35% !important;
     background: white !important;
         width: 105% !important;
         position: relative !important;
