--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -1,5 +1,5 @@
 
-      <div>
+      <div style="padding-bottom:5%">
       <p class="contact_info">Email:info@customfacilityservices.com</p>
       <p class="contact_info">Phone:480-123-4567</p>
     </div>
