--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -6,7 +6,7 @@
     <div class="container-fluid home_page padding-bottom-75" >
 
       <div class="row">
-          <div class="col-12 padding-2 background-1a navbar_container" >
+          <div class="col-12 padding-2 navbar_container" >
 
           </div>
       </div>
