--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -13,13 +13,13 @@
 
               <div class="row margin-top-10">
                   <div class="col-3 link_col">
-                      <p class="link_about"> Free Quote </p>
+                      <a href="/quote"class="normal_link"><p class="link_about"> Free Quote </p></a>
                   </div>
                   <div class="col-3 link_col">
                       <p class="link_about"> Contact Us </p>
                   </div>
                   <div class="col-3 link_col">
-                      <p class="link_about"> Our Clients </p>
+                    <a href="/#our_clients"class="normal_link"><p class="link_about"> Our Clients </p></a>
                   </div>
               </div>
 
