--- a/views/layout/mobile_navbar.ejs
+++ b/views/layout/mobile_navbar.ejs
@@ -1,5 +1,5 @@
-<div class="pos-f-t">
-<div class="collapse" id="navbarToggleExternalContent">
+<div class="pos-f-t mobile_navbar">
+<div class="" id="navbarToggleExternalContent">
   <div class="bg-dark p-4">
     <h4 class="text-white">Collapsed content</h4>
     <span class="text-muted">Toggleable via the navbar brand.</span>
