--- a/views/layout/top_clients.ejs
+++ b/views/layout/top_clients.ejs
@@ -1,4 +1,4 @@
-<div>
+<div id="our_clients">
   <p class="our_work_title">Our Top Clients </p>
 <div class="our_work_grid">
   <img src = "./assets/bkb.png" class="work_grid_item_left work_grid_item"/>
