--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -15,6 +15,15 @@
 .darkbluebackg{
   background:#0080b8
 }
+
+.dropdown_arrow{
+  width:50%;
+  margin-left:25%;
+}
+.dropdown_container{
+  margin-top:2.5%;
+
+}
 #vid{
   height:1200px;
 }
@@ -489,7 +498,7 @@ outline:none;
   opacity:0;
   height:0px;
   animation: .5s ease-in coll 1;
-
+  padding-bottom:5%;
 }
 .dropdown_container p{
   font-family: "Akrobat";
@@ -498,11 +507,19 @@ outline:none;
 
 
 }
+.showcase-container {
+  margin-top:12.5%;
+}
+a {
+color: black;
+text-decoration: none;
+cursor: auto;
+}
 .active-dropdown {
   visibility: visible !important;
   opacity:1 !important;
   animation: .5s ease-in dropdown 1;
-  height:250px;
+  height:350px;
 
 }
 .active-dropdown p{
@@ -534,7 +551,7 @@ outline:none;
 }
 @keyframes coll{
   0%{
-    height:150px;
+      height:350px;
     opacity:100%;
     color:white;
     }
@@ -542,7 +559,7 @@ outline:none;
       opacity:50%
     }
   100%{
-      height:0px;
+        height:0px;
       opacity:0%;
         color:#014884;
   }
@@ -554,11 +571,10 @@ outline:none;
       color:#014884;
     opacity:0%;
   }
-  50%{
-    height:150px;
-  }
+
   100%{
     opacity:100%;
+    height:350px;
       color:white;
   }
 }
