--- a/views/layout/about.ejs
+++ b/views/layout/about.ejs
@@ -3,6 +3,12 @@
     <div class="col-5 values_container">
       <div class="text-about-us-box dropdown-box" _id = 1>
           <p class="about-us-text">Connect With People</p>
+          <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+              <img src ="./assets/dropdown_arrow.png" _id=1 class="dropdown_arrow"/>
+            </div>
+          </div>
           <div class="dropdown_container">
               <div className="divder_dropdown"></div>
               <p class="dropdown_text">
@@ -12,6 +18,12 @@
       </div>
         <div class="text-about-us-box dropdown-box" _id = 2>
             <p class="about-us-text">Honest Work</p>
+            <div class="row">
+              <div class="col-4"></div>
+              <div class="col-4">
+                <img src ="./assets/dropdown_arrow.png" _id=2 class="dropdown_arrow"/>
+              </div>
+            </div>
             <div class="dropdown_container">
                 <div className="divder_dropdown"></div>
                 <p class="dropdown_text">
@@ -22,6 +34,12 @@
 
         <div class="text-about-us-box dropdown-box" _id = 3>
             <p class="about-us-text">Accountability</p>
+            <div class="row">
+              <div class="col-4"></div>
+              <div class="col-4">
+                <img src ="./assets/dropdown_arrow.png" _id=3 class="dropdown_arrow"/>
+              </div>
+            </div>
             <div class="dropdown_container">
                 <div className="divder_dropdown"></div>
                 <p class="dropdown_text">
@@ -30,7 +48,15 @@
               </div>
         </div>
         <div class="text-about-us-box dropdown-box" _id = 4>
+
             <p class="about-us-text">Positivity</p>
+            <div class="row">
+              <div class="col-4"></div>
+              <div class="col-4">
+                <img src ="./assets/dropdown_arrow.png" _id=4 class="dropdown_arrow"/>
+              </div>
+            </div>
+          
             <div class="dropdown_container">
                 <div className="divder_dropdown"></div>
                 <p class="dropdown_text">
