--- a/views/layout/about.ejs
+++ b/views/layout/about.ejs
@@ -12,7 +12,7 @@
           <div class="dropdown_container">
               <div className="divder_dropdown"></div>
               <p class="dropdown_text">
-                  One of the great benefits we recieve in make making this business is meeting and creating relationships with small business owners across the state and it feels great giving something of value to the community that has shaped our lives so much.
+                  We value meeting and creating relationships with small business owners across the state and enjoy providing something of value to the community that has shaped our lives so much.
               </p>
             </div>
       </div>
@@ -56,7 +56,7 @@
                 <img src ="./assets/dropdown_arrow.png" _id=4 class="dropdown_arrow"/>
               </div>
             </div>
-          
+
             <div class="dropdown_container">
                 <div className="divder_dropdown"></div>
                 <p class="dropdown_text">
