--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -32,7 +32,7 @@
     </div>
 
   <div class="showcase_image_about">
-      <img src ="./assets/showcase_1.png" class="width-100"/>
+      <img src ="./assets/showcase_1.png" class="width-100 about_showcase_image"/>
   </div>
 
 </div>
