--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -6,7 +6,7 @@
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5 logo_container">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
-          <div class="darkbluebackg background width-50 text-container "style="height:900px">
+          <div class=" background width-50 text-container "style="height:900px">
           </div>
       </div>
 
