--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -138,8 +138,11 @@ body{
   .banners_about{
     margin-top:12.5% !important;
   }
+  .smaller_text_container{
+    width:80% !important;
+  }
   .about_container{
-    margin-top:95% !important;
+    margin-top:105% !important;
     padding-bottom:20%;
   }
 
