--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -13,7 +13,7 @@
   </div>
 
       <div class="intro-text-container intro-about-container">
-          <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small">
+          <div class="big-text-container big-text-container-ani-1 big-text-about big-text-about-small smaller_text_container">
                 <p class="big-text big-text-about">About</p>
           </div>
             <div class="big-text-container big-text-container-ani-2 width-120 big-text-about big-text-about-bigger" >
