--- a/views/layout/about/mission.ejs
+++ b/views/layout/about/mission.ejs
@@ -3,7 +3,7 @@
         <div class="col-3 mobile_divide"></div>
         <div class="col-6 mobile_mission_container">
             <p class="about_title"> Our Mission </p>
-            <p class="about_description">
+            <p class="about_description mission_text_size">
 
             Our mission is to revolutionize the facility services industry by fostering a team of people who care about the local community and are passionate about the customer.
             </p>
