--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -133,7 +133,7 @@ body{
   }
   .mission_text_size{
     font-size:18px !important;
-    margin-top:1% !important;
+    padding-top:2.5% !important;
   }
   .showcase_image_about{
     top:-40% !important;
