--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -9,7 +9,7 @@
       <div class='col-6 modal_body no-padding modal_col'>
 
           <img class="width-100" src="./assets/window_1.png"/>
-          <p id="modal_exit">X</p>
+          <a href="/exit"><p id="modal_exit">X</p></a>
         <div class="modal-dialog">
 
           <p class="quote_title">Your Quote:</p>
