--- a/views/layout/quote/showcase.ejs
+++ b/views/layout/quote/showcase.ejs
@@ -32,7 +32,7 @@
     </div>
 
   <div class="showcase_image_about">
-      <img src ="./assets/showcase_3.png" class="width-100" style="height:1200px"/>
+      <img src ="./assets/showcase_3.png" class="width-100 about_showcase_image"/>
   </div>
 
 </div>
