--- a/views/layout/quote/showcase.ejs
+++ b/views/layout/quote/showcase.ejs
@@ -2,11 +2,11 @@
 
   <div class="row relative">
 
-      <div class="col-4 no-pad intro-container relative">
-          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5 logo_container">
+      <div class="col-4 no-pad intro-container relative no-background">
+          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-2_5 logo_container ">
             <img src = "./assets/logo.png"class="width-100" />
           </div>
-          <div class="darkbluebackg background width-50 text-container  ">
+          <div class="darkbluebackg background width-50 text-container  no-background">
           </div>
       </div>
 
