--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -27,7 +27,7 @@
     height:600px !important;
   }
   .work_container{
-    margin-top:85% !important;
+    margin-top:45%;
 
   }
   .banners_about{
