--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -15,7 +15,7 @@
 
 
 </div>
-
+  <%- include("./../layout/quote/quote_sheet.ejs") %>
   <%- include("./../layout/quote/what_we_do.ejs") %>
 
 </div>
