--- a/views/layout/quote/quote_sheet.ejs
+++ b/views/layout/quote/quote_sheet.ejs
@@ -1,6 +1,7 @@
-<div class="quotesheet_container">
-  <form href="/schedule" action="POST">
-  <div class="row">
+<div class="quotesheet_container" >
+  <p class="quotesheet_title">Receive a Free Quote and Make Your Windows Shine!</p>
+  <form action="/schedule" action="POST">
+  <div class="row ">
       <div class="col-12">
           <label>
               First Name
@@ -37,7 +38,15 @@
           </label>
           <input class="form-control quote_input" name="largeWindows" placeholder="Enter Window Count" />
       </div>
+      <div class="col-3"></div>
+      <div class="col-6">
+        <button class="width-100 quotebutton margin-top-10 margin-bottom-5"type="submit"> Receive Quote</button>
+      </div>
+
+      <div class='col-3'></div>
+      </form>
   </div>
+
 
 
 </div>
