--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -1,5 +1,6 @@
 <%- include("./../layout/quote/head.ejs") %>
 <div id="wrapper" class="<%=lock %> ">
+  <%- include("./../layout/modal.ejs") %>
 
 <div class="container-fluid home_page padding-bottom-75" >
 
@@ -15,7 +16,9 @@
 
 
 </div>
+  <br />
   <%- include("./../layout/quote/quote_sheet.ejs") %>
+  <br />
   <%- include("./../layout/quote/what_we_do.ejs") %>
 
 </div>
