--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -147,6 +147,9 @@ body{
   .smaller_text_container{
     width:100% !important;
   }
+  .whes{
+    width:140% !important;
+  }
   .about_container{
     margin-top:115% !important;
     padding-bottom:20%;
