--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -1,6 +1,6 @@
 <div class="what_we_do_container relative">
 
-    <img src = "./assets/showcase_2.png" class="what_we_do_image"/>
+    <img src = "./assets/showcase_2.png" class="what_we_do_image whes"/>
       <div class="what_we_do_inner">
         <div class="row margin-top-5">
 
