--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -71,23 +71,25 @@ label{
     height:600px !important;
   }
   .quotesheet_container{
-    margin-top:20%;
+    margin-top:20% !important;
   }
   .work_container{
-    margin-top:30% !important;
+    margin-top:20% !important;
     padding-top:10%;
 
   }
   .quotebutton{
     margin-top:10%;
     font-size:15px;
-    border-color:none;
+    border-color:black;
   }
   .what_we_do_image{
     right:0px;
   }
   .what_we_do_inner{
     padding:5%;
+    padding-top:10%;
+    padding-bottom:10%;
   }
   .banners_about{
     margin-top:20% !important;
