--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -177,6 +177,7 @@ body{
   }
   .what_we_do_image{
     padding-bottom: 10%;
+    height:500px;
     position: relative;
   }
   .what_we_do_title{
