--- a/views/layout/quote/what_we_do.ejs
+++ b/views/layout/quote/what_we_do.ejs
@@ -8,7 +8,7 @@
             <p class="what_we_do_title "> What We Do </p>
 
               <p class="what_we_do_description ">
-                  A business that looks well maintained is successful. fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
+                  A business that looks well maintained is successful. Our company specializes in cleaning windows and patios to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.  can spend time on the things that matter the most.
               </p>
 
 
