--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -130,6 +130,7 @@ body{
   }
   .whes{
     width:140% !important;
+    height:700px !important;
   }
   .about_showcase_image{
     height:500px !important;
