--- a/views/layout/quote/showcase.ejs
+++ b/views/layout/quote/showcase.ejs
@@ -32,7 +32,7 @@
     </div>
 
   <div class="showcase_image_about">
-      <img src ="./assets/showcase_3.png" class="width-100 quote_showcase_image"/>
+      <img src ="./assets/showcase_3.png" class="width-100 quote_showcase_image" id="quote_showcase_background"/>
   </div>
 
 </div>
