--- a/views/layout/quote/what_we_do.ejs
+++ b/views/layout/quote/what_we_do.ejs
@@ -1,6 +1,6 @@
 <div class="work_container relative">
 
-    <img src = "./assets/services.png" class="what_we_do_image"/>
+    <img src = "./assets/services.png" class="what_we_do_image" id="quote_image_what_we_do"/>
       <div class="what_we_do_inner">
         <div class="row margin-top-5">
 
