--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -481,6 +481,7 @@ outline:none;
     font-size:35px;
     position: relative;
     z-index:1919;
+    color:black;
     margin: 1.4em 0;
     font-weight: normal;
     font-family: "Akrobat";
