--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -475,10 +475,10 @@ outline:none;
   font-weight: bold;
 }
 .contact_info{
-  line-height: 1.75;
-
+    line-height: 1.75;
+    padding-left:10%;
     font-weight: normal;
-    font-size:35px !important;
+    font-size:40px !important;
     position: relative;
     z-index:1919;
     color:black;
