--- a/views/layout/contact.ejs
+++ b/views/layout/contact.ejs
@@ -1,6 +1,6 @@
 
       <div style="padding-bottom:20%">
-        <p class="contact_info">Phone:404-303-30303</p>
+        <p class="contact_info_2">Phone:404-303-30303</p>
       <p class="contact_info">Email:info@customfacilityservices.com</p>
         <p class="contact_info">Phone:404-303-30303</p>
 
