--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -605,7 +605,14 @@ cursor: auto;
   width:175% !important;
 }
 
-
+.contact_info{
+  color: black !important;
+  font-size: 30px ;
+  font-family: monospace !important;
+  width:100% !important;
+  padding: 1% !important;
+  padding-left: 2.5% !important;
+}
 @media screen and (max-width:944px){
 .active-dropdown{
   height:300px !important;
@@ -681,15 +688,9 @@ cursor: auto;
   }
 
 .contact_info{
-  color: color !important;
-  font-size: 15px !important;
-  font-weight: normal !important;
-  font-family: monospace !important;
-  background: #00103d !important;
-  width:100% !important;
-  padding: 1% !important;
-  text-align: center !important;
-  padding-left: 2.5% !important;
+  color: black !important;
+  font-size: 25px ;
+  
 }
   .about-us-text{
     font-size:30px !important;
@@ -830,7 +831,7 @@ cursor: auto;
     opacity:0;
   }
   .contact_section{
-    margin-top:15%;
+    margin-top:30%;
   }
   .intro-form-container{
     width:120% !important;
